css/style.css
/* Main element properties */
body
{
	font-family: "Helvetica";

	margin: 0px;
	padding: 0px;

	text-align: center;
}

p
{
	display: inline-block;

	margin: 3px;
}

ul
{
	list-style-type: none;

	padding: 0px;
}

h1
{
	margin-bottom: 0px;
}

/* Menu properties */
#menu
{
	background-color: #EEEEEE;

	padding: 10px;
	padding-bottom: 5px;
	margin: 0px;
}

#menu-list
{
	margin: 0px;

	display:inline;
}

/* List of menu items properties */
#menu-list > li
{
	display: inline;

	position: relative;

	padding: 4px;
	padding-left: 12px;
	padding-right: 12px;

	border: 2px;
	border-style: solid;
	border-color: #CCCCCC;

	background-color: #AAAAAA;
}

/* List of menu items item properties */
.menu-item > li
{
	left: auto;
	display: block;

	position: relative;

	padding: 5px;
	padding-left: 15px;
	padding-right: 15px;

	background-color: #BBBBBB;

	border: 1px;
	border-style: solid;
	border-color: #555555;

	z-index: 5000;
}

.menu-item
{
	margin-top: 5px;

	position: absolute;
	display: block;
	left: auto;
}

/* Item entry properties */
#items
{
	padding: 5px;
}

.item
{
	display: inline-block;

	border-radius: 5px;
	border: 1px solid gray;
	box-shadow: 3px 3px 5px;

	background-color: #EEEEEE;

	padding: 3px;
	padding-left: 10px;

	margin: 10px;
}

.item-img
{
	width: 40px;
	height: 40px;
	position: relative;
	overflow: hidden;

	background-image: url("../img/items.png");
	background-repeat: no-repeat;
	background-color: transparent;

	display: inline-block;
	vertical-align: middle;

	margin: 5px;

	position: relative;
	z-index: 1;
}

.found
{
	vertical-align: middle;
	font-size: 14px;
	font-weight: bold;

	padding: 6px;

	height: 43px;

	line-height: 0px;
}

.found-box
{
	width: 20px;
	height: 20px;

	display: inline-block;

	margin: 3px;
	margin-left: 5px;

	border-radius: 3px;
	border: 1px solid gray;

	background-repeat: no-repeat;
	background-position: 3px 3px;
}

p.found-text
{
	height: 20px;

	top:10px;

	vertical-align: middle;

	margin: 0px;
}

/* table things */

#items-table
{
	margin: 30px;
	margin-left: auto;
	margin-right: auto;
	text-align: left;

	border-collapse: collapse;
}

#items-table tr
{
	border-style: solid;
	border-color: gray;
	border-left: 0px;
	border-right: 0px;
	border-top: 0px;
	border-bottom-width: 1px;
}

#items-table th
{
	padding-bottom: 20px;
	padding-left: 20px;

	text-align: left;

	font-size: large;
}

#items-table td
{
	padding-right: 0px;

	padding: 20px;
	padding-top: 5px;
	padding-bottom: 5px;
}

/* Property classes */
.checked
{
	background-image: url("../img/checkmark.png");
}

.green
{
	background-color: #BBFFBB;
}

.red
{
	color: #FF3333;
}

.hidden
{
	display: none;
}

.highlight
{
	background-color: #EEEEEE !important;
}

